--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="utf-8">
     <title>Emoji Mart | One component to pick them all</title>
-    <link rel="stylesheet" href="https://npmcdn.com/emoji-mart@0.2.2/css/emoji-mart.css">
+    <link rel="stylesheet" href="https://npmcdn.com/emoji-mart@0.2.3/css/emoji-mart.css">
     <style>
       * {
         margin: 0; padding: 0;
@@ -32,10 +32,18 @@
       .row {
         margin-top: 1em;
       }
+
+      .demo-title {
+        display: inline-block;
+      }
+
+      iframe {
+        margin-left: 1em;
+      }
     </style>
   </head>
   <body>
     <div></div>
-    <script src="https://npmcdn.com/emoji-mart@0.2.2/example/bundle.js"></script>
+    <script src="https://npmcdn.com/emoji-mart@0.2.3/example/bundle.js"></script>
   </body>
 </html>
